--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -1568,6 +1568,40 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>American Zhu Kezhen Education Foundation</td>
+      <td>美国竺可桢教育基金会</td>
+      <td>United States</td>
+      <td>Zhejiang University Zhu Kezhen College and School of Pharmacy Construction and Development</td>
+      <td>浙江大学竺可桢学院和药学院建设发展</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Education</td>
+      <td>2021-09-30</td>
+      <td>2022-09-29</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>American Zhu Kezhen Education Foundation</td>
+      <td>美国竺可桢教育基金会</td>
+      <td>United States</td>
+      <td>Zhejiang University Guanghua Law School Wang Zhiming Law Firm Student Financial Aid Scholarship</td>
+      <td>浙江大学光华法学院王志明律师事务所奖助学金</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2021-09-30</td>
+      <td>2022-09-29</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
       <td>Amity Foundation (Hong Kong)</td>
       <td>爱德基金会（香港）</td>
       <td>Hong Kong</td>
@@ -3509,23 +3543,6 @@
       <td>Barry &amp; Martin’s Trust</td>
       <td>贝利马丁基金会</td>
       <td>United Kingdom</td>
-      <td>AIDS Prevention Education and Treatment for College Students and Adolescents</td>
-      <td>在校大学生及青少年艾滋病预防教育和治疗</td>
-      <td>Heilongjiang Province</td>
-      <td>黑龙江省</td>
-      <td>Health, Youth</td>
-      <td>2021-05-25</td>
-      <td>2022-05-25</td>
-      <td>Heilongjiang Association of STD and AIDS Prevention and Control</td>
-      <td>黑龙江省性病艾滋病防治协会</td>
-      <td>Non-Profit or Foundation</td>
-      <td>Heilongjiang Health Commission</td>
-      <td>黑龙江省卫生健康委员会</td>
-    </tr>
-    <tr>
-      <td>Barry &amp; Martin’s Trust</td>
-      <td>贝利马丁基金会</td>
-      <td>United Kingdom</td>
       <td>Jiangxi Province AIDS Care Assistance Project</td>
       <td>贝利马丁基金会江西省艾滋病人关怀救助项目</td>
       <td>Jiangxi Province</td>
@@ -3674,6 +3691,23 @@
       <td>Non-Profit or Foundation</td>
       <td>Yichang City Bureau of Civil Affairs</td>
       <td>宜昌市民政局</td>
+    </tr>
+    <tr>
+      <td>Barry &amp; Martin’s Trust</td>
+      <td>贝利马丁基金会</td>
+      <td>United Kingdom</td>
+      <td>AIDS Prevention Education and Treatment for College Students and Adolescents</td>
+      <td>在校大学生及青少年艾滋病预防教育和治疗</td>
+      <td>Heilongjiang Province</td>
+      <td>黑龙江省</td>
+      <td>Health, Youth</td>
+      <td>2021-05-25</td>
+      <td>2022-05-25</td>
+      <td>Heilongjiang Association of STD and AIDS Prevention and Control</td>
+      <td>黑龙江省性病艾滋病防治协会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Heilongjiang Health Commission</td>
+      <td>黑龙江省卫生健康委员会</td>
     </tr>
     <tr>
       <td>Bay Area Hong Kong Center</td>
@@ -4777,6 +4811,23 @@
       <td>Zhejiang Academy of Forestry</td>
       <td>浙江省林业科学研究院</td>
       <td>Think Tank or Research Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Botanic Gardens Conservation International (BGCI)</td>
+      <td>国际植物园保护联盟</td>
+      <td>United Kingdom</td>
+      <td>Research on Comprehensive Protection of Endangered Mangrove Plant Hainan Sonneratia</td>
+      <td>濒危红树植物海南海桑的综合 保护研究</td>
+      <td>Hainan Province</td>
+      <td>海南省</td>
+      <td>Environment</td>
+      <td>2021-02-19</td>
+      <td>2021-12-31</td>
+      <td>Hainan Normal University</td>
+      <td>海南师范大学</td>
+      <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
     </tr>
@@ -13658,6 +13709,23 @@
       <td>Europe-Asia Financial Group</td>
       <td>欧亚财团</td>
       <td>Japan</td>
+      <td>Low-Birthrate, Aging Societies and the Asian Community</td>
+      <td>少子老龄化社会与亚洲共同体</td>
+      <td>Shandong Province</td>
+      <td>山东省</td>
+      <td>Aging</td>
+      <td>2021-09-01</td>
+      <td>2021-12-31</td>
+      <td>Shandong Youth University of Political Science</td>
+      <td>山东青年政治学院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Europe-Asia Financial Group</td>
+      <td>欧亚财团</td>
+      <td>Japan</td>
       <td>Research on the Sino-Japanese Art Design Ecosphere from the Perspective of “Eurasian Community”</td>
       <td>“欧亚共同体”视野下的中日艺术设计生态圈研究</td>
       <td>Hubei Province</td>
@@ -13769,23 +13837,6 @@
       <td>2020-12-25</td>
       <td>The International School of Tongji University</td>
       <td>上海市同济大学国际文化交流学院</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Europe-Asia Financial Group</td>
-      <td>欧亚财团</td>
-      <td>Japan</td>
-      <td>Low-Birthrate, Aging Societies and the Asian Community</td>
-      <td>少子老龄化社会与亚洲共同体</td>
-      <td>Shandong Province</td>
-      <td>山东省</td>
-      <td>Aging</td>
-      <td>2021-09-01</td>
-      <td>2021-12-31</td>
-      <td>Shandong Youth University of Political Science</td>
-      <td>山东青年政治学院</td>
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
@@ -19183,6 +19234,23 @@
       <td>Grace Charity Foundation Limited</td>
       <td>慈恩基金会有限公司</td>
       <td>Hong Kong</td>
+      <td>Caring for Flood-Affected Schools in Henan province, Xinxiang City</td>
+      <td>关爱河南新乡受水灾影响学校</td>
+      <td>Henan Province</td>
+      <td>河南省</td>
+      <td>Disaster Relief, Education</td>
+      <td>2021-10-28</td>
+      <td>2022-01-28</td>
+      <td>Huojia County, Huangdi Town Central School</td>
+      <td>获嘉县黄堤镇中心校</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Grace Charity Foundation Limited</td>
+      <td>慈恩基金会有限公司</td>
+      <td>Hong Kong</td>
       <td>Huojia County Construction Assistance for Kaixuan Road West School Teaching Building</td>
       <td>获嘉县援建凯旋路西校教学楼</td>
       <td>Henan Province</td>
@@ -22121,23 +22189,6 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
-      <td>Grace Charity Foundation Limited</td>
-      <td>慈恩基金会有限公司</td>
-      <td>Hong Kong</td>
-      <td>Caring for Flood-Affected Schools in Henan province, Xinxiang City</td>
-      <td>关爱河南新乡受水灾影响学校</td>
-      <td>Henan Province</td>
-      <td>河南省</td>
-      <td>Disaster Relief, Education</td>
-      <td>2021-10-28</td>
-      <td>2022-01-28</td>
-      <td>Huojia County, Huangdi Town Central School</td>
-      <td>获嘉县黄堤镇中心校</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
       <td>Gratia Foundation</td>
       <td>华恩基金会</td>
       <td>Hong Kong</td>
@@ -22614,6 +22665,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Green Action Charity Foundation</td>
+      <td>力行植林慈善基金会</td>
+      <td>Hong Kong</td>
+      <td>Meixian District "Assisting the Poor and Restoring Sight" Activity</td>
+      <td>梅县区“助困复明”活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Disabilities, Health, Poverty Alleviation</td>
+      <td>2021-10-15</td>
+      <td>2022-06-25</td>
+      <td>Meizhou City, Meixian District Disabled Persons’ Federation</td>
+      <td>梅州市梅县区残疾人联合会</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Green Court Foundation Limited</td>
       <td>碧云资本基金会有限公司</td>
       <td>Hong Kong</td>
@@ -22646,6 +22714,23 @@
       <td>Non-Profit or Foundation</td>
       <td>Shanghai Commission of Education</td>
       <td>上海市教育委员会</td>
+    </tr>
+    <tr>
+      <td>Green Earth Center</td>
+      <td>特定非营利活动法人地球绿化中心</td>
+      <td>Japan</td>
+      <td>Fenging Tree Planting Project</td>
+      <td>地球绿化中心丰宁植树项目</td>
+      <td>Hebei Province</td>
+      <td>河北省</td>
+      <td>Environment</td>
+      <td>2021-09-28</td>
+      <td>2022-09-28</td>
+      <td>Fengning Manchu Autonomous County Forestry and Grassland Administration</td>
+      <td>丰宁满族自治县林业和草原局</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
     </tr>
     <tr>
       <td>Green Earth Network</td>
@@ -30400,6 +30485,23 @@
       <td>达拉特旗教育体育局</td>
     </tr>
     <tr>
+      <td>Japan-China Youth Economic and Cultural Exchange Association</td>
+      <td>日中青年经济文化交流协会</td>
+      <td>Japan</td>
+      <td>Barren Mountain Afforestation Project in Lulong County, Liujiaying Town, Liujiakou and Xiazhuang Villages</td>
+      <td>卢龙县刘家营乡刘家口村、下庄村荒山造林项目</td>
+      <td>Hebei Province</td>
+      <td>河北省</td>
+      <td>Environment</td>
+      <td>2021-10-01</td>
+      <td>2022-04-14</td>
+      <td>Lulong County Natural Resources and Planning Bureau</td>
+      <td>卢龙县自然资源和规划局</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Ji and Li Family Foundation</td>
       <td>纪李家庭基金会</td>
       <td>United States</td>
@@ -31151,6 +31253,23 @@
       <td>Kadoorie Charitable Foundation</td>
       <td>嘉道理慈善基金会</td>
       <td>Hong Kong</td>
+      <td>Shuangmiao Village Green Industry Development Program</td>
+      <td>双庙村绿色产业发展项目</td>
+      <td>Shaanxi Province</td>
+      <td>陕西省</td>
+      <td>Economic Development, Environment</td>
+      <td>2021-08-20</td>
+      <td>2022-07-31</td>
+      <td>Shaanxi Volunteer Mothers Association for Environmental Protection</td>
+      <td>陕西省妈妈环保志愿者协会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Shaanxi Province Women's Federation</td>
+      <td>陕西省妇女联合会</td>
+    </tr>
+    <tr>
+      <td>Kadoorie Charitable Foundation</td>
+      <td>嘉道理慈善基金会</td>
+      <td>Hong Kong</td>
       <td>Shanyang Zhongcun Town Care for and Friendliness Toward Children Model Community Construction Project</td>
       <td>山阳中村镇儿童关爱暨友好型社区建设项目</td>
       <td>Shaanxi Province</td>
@@ -31316,23 +31435,6 @@
       <td>Non-Profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
-    </tr>
-    <tr>
-      <td>Kadoorie Charitable Foundation</td>
-      <td>嘉道理慈善基金会</td>
-      <td>Hong Kong</td>
-      <td>Shuangmiao Village Green Industry Development Program</td>
-      <td>双庙村绿色产业发展项目</td>
-      <td>Shaanxi Province</td>
-      <td>陕西省</td>
-      <td>Economic Development, Environment</td>
-      <td>2021-08-20</td>
-      <td>2022-07-31</td>
-      <td>Shaanxi Volunteer Mothers Association for Environmental Protection</td>
-      <td>陕西省妈妈环保志愿者协会</td>
-      <td>Non-Profit or Foundation</td>
-      <td>Shaanxi Province Women's Federation</td>
-      <td>陕西省妇女联合会</td>
     </tr>
     <tr>
       <td>Karl Schlecht Foundation (KSG)</td>
@@ -34818,6 +34920,23 @@
       <td>Hospital or Medical Center</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Liu Yong Ling Foundation Limited</td>
+      <td>刘永龄基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Zhejiang University Yilida Liu Yong Ling Student Financial Aid Scholarship Fund</td>
+      <td>浙江大学亿利达刘永龄奖助学金</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2021-09-10</td>
+      <td>2022-09-09</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
     </tr>
     <tr>
       <td>Live in Harmony Fund Limited</td>
@@ -39053,6 +39172,23 @@
       <td>教育部</td>
     </tr>
     <tr>
+      <td>Morningside Foundation</td>
+      <td>晨兴基金会有限公司</td>
+      <td>United States</td>
+      <td>Zhejiang University Chen Xingwen China Talents Project</td>
+      <td>浙江大学晨兴文化中国人才计划</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Education</td>
+      <td>2021-08-01</td>
+      <td>2022-07-31</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
       <td>Mucha Foundation</td>
       <td>慕夏基金会</td>
       <td>Czechia</td>
@@ -41752,6 +41888,23 @@
       <td>Duke Kunshan University</td>
       <td>昆山杜克大学</td>
       <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Okayama City Japan-China Friendship Association</td>
+      <td>冈山市日中友好协会</td>
+      <td>Japan</td>
+      <td>Luoyang City, Xi'an County, Shijing Town Ecological Forest Protection Program</td>
+      <td>洛阳市新安县石井镇生态防护林项目</td>
+      <td>Henan Province</td>
+      <td>河南省</td>
+      <td>Environment</td>
+      <td>2021-10-20</td>
+      <td>2022-10-19</td>
+      <td>Luoyang City Foreign Affairs Service Center (Luoyang People's Association for Friendship with Foreign Countries Secretariat)</td>
+      <td>洛阳市外事服务中心（洛阳市人民对外友好协会秘书处）</td>
+      <td>Party or Government Entity</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
     </tr>
@@ -51293,6 +51446,23 @@
       <td>共青团中央委员会</td>
     </tr>
     <tr>
+      <td>The Coach Foundation</td>
+      <td>Coach基金会</td>
+      <td>United States</td>
+      <td>Dream It Real - 2021 Workshop Program</td>
+      <td>Coach基金会.驰梦而行-2021工作室项目</td>
+      <td>Shanghai City / Hubei Province</td>
+      <td>上海市,湖北省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2021-08-01</td>
+      <td>2021-12-31</td>
+      <td>China Youth Development Foundation</td>
+      <td>中国青少年发展基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Communist Youth League Central Committee</td>
+      <td>共青团中央委员会</td>
+    </tr>
+    <tr>
       <td>The Coca-Cola Foundation</td>
       <td>可口可乐基金会</td>
       <td>United States</td>
@@ -57039,6 +57209,23 @@
       <td>南宁市教育局</td>
     </tr>
     <tr>
+      <td>Twinklestars</td>
+      <td>摘星计划</td>
+      <td>Hong Kong</td>
+      <td>Twinklestars 2021 Student Financial Aid</td>
+      <td>摘星计划2021年助学</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2021-10-20</td>
+      <td>2022-10-19</td>
+      <td>Huaiji County Education Bureau Student Financial Aid Management Center</td>
+      <td>怀集县教育局学生资助管理中心</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>U-Hearts</td>
       <td>两地一心</td>
       <td>Hong Kong</td>
@@ -62037,6 +62224,23 @@
       <td>雅安市教育局</td>
     </tr>
     <tr>
+      <td>Yellow Earth Foundation</td>
+      <td>黄土地基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Hong Kong Yellow Earth Fund</td>
+      <td>香港黄土地基金</td>
+      <td>Gansu Province</td>
+      <td>甘肃省</td>
+      <td>Unknown</td>
+      <td>2021-10-15</td>
+      <td>2022-09-26</td>
+      <td>Gansu Province, Min Count No. 1 Middle School</td>
+      <td>甘肃省岷县第一中学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Yellow River Forest Greening Network</td>
       <td>黄河森林绿化网络</td>
       <td>Japan</td>
@@ -62880,6 +63084,57 @@
       <td>Education, Poverty Alleviation</td>
       <td>2021-08-09</td>
       <td>2022-08-08</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Zhejiang University (Hong Kong) Education Fund Limited</td>
+      <td>香港浙江大学教育基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>First Affiliated Hospital of Zhejiang University School of Medicine Cellular Immunotherapy and Research Fund</td>
+      <td>浙江大学医学院附属第一医院细胞免疫治疗与研究基金</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Health, Science and Technology</td>
+      <td>2021-09-30</td>
+      <td>2022-09-29</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Zhejiang University (Hong Kong) Education Fund Limited</td>
+      <td>香港浙江大学教育基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>First Affiliated Hospital of Zhejiang University Education Foundation School of Medicine Development Fund Project</td>
+      <td>浙江大学教育基金会医学院附属第一医院发展基金项目</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Health</td>
+      <td>2021-09-30</td>
+      <td>2022-09-29</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Zhejiang University (Hong Kong) Education Fund Limited</td>
+      <td>香港浙江大学教育基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>First Affiliated Hospital of Zhejiang University Education Foundation School of Medicine Organ Transplant Fund</td>
+      <td>浙江大学教育基金会医学院附属第一医院器官移植基金</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Health</td>
+      <td>2021-08-20</td>
+      <td>2022-08-19</td>
       <td>Zhejiang University Education Foundation</td>
       <td>浙江大学教育基金会</td>
       <td>Non-Profit or Foundation</td>
