--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -111,6 +111,17 @@
       <td>Beijing, Chongqing, Fujian, Guangdong, Hainan, Hebei, Henan, Hubei, Hunan, Jiangsu, Liaoning, Qinghai, Shaanxi, Shandong, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Africa-China Cooperation Association for Development</td>
+      <td>非洲中国合作与发展协会</td>
+      <td>Chongqing Commission of Commerce</td>
+      <td>重庆市商务委员会</td>
+      <td>Morocco</td>
+      <td>Arts and Culture, Education, Health, International Relations/Exchange, Science and Technology, Sport, Trade/Industry Association</td>
+      <td>Chongqing</td>
+      <td>2021-10-19</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Agriterra</td>
       <td>荷兰农民生产者协会</td>
       <td>Chongqing Commission of Agriculture and Rural Affairs (formerly Chongqing Agriculture Commission)</td>
@@ -3026,6 +3037,17 @@
       <td>Beijing, Guangdong, Jiangsu, Shanghai, Zhejiang</td>
     </tr>
     <tr>
+      <td>International Chili Alliance Culture Association</td>
+      <td>国际辣椒联盟文化协会</td>
+      <td>Chongqing Commission for Agriculture and Rural Affairs</td>
+      <td>重庆市农业农村委员会</td>
+      <td>Italy</td>
+      <td>Arts and Culture, Trade/Industry Association</td>
+      <td>Chongqing</td>
+      <td>2021-10-19</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>International China Concern</td>
       <td>国际关心中国慈善协会有限公司</td>
       <td>Hunan Department of Civil Affairs</td>
@@ -3222,6 +3244,17 @@
       <td>Guangdong</td>
       <td>2021-06-17</td>
       <td>Guangdong</td>
+    </tr>
+    <tr>
+      <td>International Society of Minimally Invasive and Virtual Surgery</td>
+      <td>国际微无创医学会</td>
+      <td>Chongqing Health Commission (formerly Chongqing Health and Family Planning Commission)</td>
+      <td>重庆市卫生健康委员会</td>
+      <td>Singapore</td>
+      <td>Health, Science and Technology</td>
+      <td>Chongqing</td>
+      <td>2021-10-19</td>
+      <td>Chongqing, Guizhou, Sichuan, Yunnan</td>
     </tr>
     <tr>
       <td>International Taekwon-Do Federation</td>
@@ -5741,6 +5774,17 @@
       <td>Beijing</td>
       <td>2019-12-16</td>
       <td>Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Hainan, Hebei, Heilongjiang, Henan, Hunan, Jiangsu, Jilin, Qinghai, Shaanxi, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>Transport Asset Protection Association Asia-Pacific</td>
+      <td>亚太运输资产保护协会</td>
+      <td>Shanghai Commission of Transport</td>
+      <td>上海市交通委员会</td>
+      <td>Singapore</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2021-10-22</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>U.S. Dairy Export Council</td>
