--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -718,17 +718,6 @@
     <tr>
       <td>Cambodia International Chamber of Commerce</td>
       <td>柬埔寨国际商会</td>
-      <td>Council for the Promotion of International Trade, Zhejiang</td>
-      <td>浙江省贸易促进会</td>
-      <td>Cambodia</td>
-      <td>Arts and Culture, International Relations/Exchange, Trade/Industry Association</td>
-      <td>Zhejiang</td>
-      <td>2021-03-26</td>
-      <td>Zhejiang</td>
-    </tr>
-    <tr>
-      <td>Cambodia International Chamber of Commerce</td>
-      <td>柬埔寨国际商会</td>
       <td>Council for the Promotion of International Trade, Hubei</td>
       <td>中国国际贸易促进会湖北分会</td>
       <td>Cambodia</td>
@@ -736,6 +725,17 @@
       <td>Hubei</td>
       <td>2021-02-04</td>
       <td>Guizhou, Hubei, Jiangsu</td>
+    </tr>
+    <tr>
+      <td>Cambodia International Chamber of Commerce</td>
+      <td>柬埔寨国际商会</td>
+      <td>Council for the Promotion of International Trade, Zhejiang</td>
+      <td>浙江省贸易促进会</td>
+      <td>Cambodia</td>
+      <td>Arts and Culture, International Relations/Exchange, Trade/Industry Association</td>
+      <td>Zhejiang</td>
+      <td>2021-03-26</td>
+      <td>Zhejiang</td>
     </tr>
     <tr>
       <td>Campaign for Tobacco-Free Kids</td>
@@ -4014,6 +4014,17 @@
       <td>Beijing</td>
       <td>2019-11-27</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Macao Youth Association of Patriotic Education</td>
+      <td>澳门爱国教育青年协会</td>
+      <td>Guangdong Youth Federation</td>
+      <td>广东省青年联合会</td>
+      <td>Macau</td>
+      <td>International Relations/Exchange, Youth</td>
+      <td>Guangdong</td>
+      <td>2021-11-09</td>
+      <td>Guangdong</td>
     </tr>
     <tr>
       <td>Macau International Investment Association</td>
