--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -518,6 +518,17 @@
       <td>Zhejiang</td>
     </tr>
     <tr>
+      <td>Australia Asian Commerce Council Inc</td>
+      <td>澳亚商会</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>Australia</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2021-11-16</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Australia-China Business Club</td>
       <td>澳中商贸发展促进会</td>
       <td>Guangxi Department of Commerce</td>
@@ -1428,6 +1439,17 @@
       <td>Health, International Relations/Exchange, Science and Technology</td>
       <td>Shanghai</td>
       <td>2020-07-07</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Colombian Coffee Growers Federation</td>
+      <td>哥伦比亚国家咖啡生产者协会</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>Colombia</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2021-11-16</td>
       <td>China</td>
     </tr>
     <tr>
@@ -4938,6 +4960,17 @@
       <td>Beijing</td>
       <td>2017-11-29</td>
       <td>Beijing</td>
+    </tr>
+    <tr>
+      <td>Romania Industry and Commerce Federation</td>
+      <td>罗马尼亚工商联合会</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>Romania</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2021-11-16</td>
+      <td>Shanghai</td>
     </tr>
     <tr>
       <td>Rosa Luxemburg Stiftung</td>
