--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -694,17 +694,6 @@
       <td>Shandong</td>
     </tr>
     <tr>
-      <td>Butterfly Children’s Hospices</td>
-      <td>蝴蝶慈善基金会有限公司</td>
-      <td>Hunan Department of Civil Affairs</td>
-      <td>湖南省民政厅</td>
-      <td>Hong Kong</td>
-      <td>Health, Youth</td>
-      <td>Hunan</td>
-      <td>2018-09-10</td>
-      <td>Hunan</td>
-    </tr>
-    <tr>
       <td>C40 Cities</td>
       <td>C40城市气候领导联盟</td>
       <td>Beijing Development and Reform Commission</td>
@@ -1167,17 +1156,6 @@
       <td>Beijing</td>
     </tr>
     <tr>
-      <td>China-Britain Business Council (Hubei)</td>
-      <td>英中贸易协会</td>
-      <td>Hubei Department of Commerce</td>
-      <td>湖北省商务厅</td>
-      <td>United Kingdom</td>
-      <td>Trade/Industry Association</td>
-      <td>Hubei</td>
-      <td>2021-01-08</td>
-      <td>Henan, Hubei</td>
-    </tr>
-    <tr>
       <td>China-Britain Business Council (Hunan)</td>
       <td>英中贸易协会</td>
       <td>Hunan Department of Commerce</td>
@@ -1198,17 +1176,6 @@
       <td>Jiangsu</td>
       <td>2017-04-10</td>
       <td>Jiangsu</td>
-    </tr>
-    <tr>
-      <td>China-Britain Business Council (Shandong)</td>
-      <td>英中贸易协会</td>
-      <td>Shandong Department of Commerce</td>
-      <td>山东省商务厅</td>
-      <td>United Kingdom</td>
-      <td>Trade/Industry Association</td>
-      <td>Shandong</td>
-      <td>2017-10-19</td>
-      <td>Shandong</td>
     </tr>
     <tr>
       <td>China-Britain Business Council (Shanghai)</td>
@@ -1453,17 +1420,6 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>Colombian Coffee Growers Federation (FNC)</td>
-      <td>哥伦比亚国家咖啡生产者协会</td>
-      <td>Beijing Bureau of Commerce (formerly Beijing Commission of Commerce)</td>
-      <td>北京市商务委员会</td>
-      <td>Colombia</td>
-      <td>Trade/Industry Association</td>
-      <td>Beijing</td>
-      <td>2018-01-09</td>
-      <td>Beijing, Chongqing, Fujian, Guangdong, Hainan, Hebei, Heilongjiang, Hubei, Hunan, Jiangsu, Jiangxi, Liaoning, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
-    </tr>
-    <tr>
       <td>Concordia Welfare and Education Foundation</td>
       <td>协同福利及教育基金</td>
       <td>Yunnan Department of Education</td>
@@ -1473,17 +1429,6 @@
       <td>Yunnan</td>
       <td>2018-01-08</td>
       <td>Yunnan</td>
-    </tr>
-    <tr>
-      <td>Confederation of Indian Industry</td>
-      <td>印度工业联合会</td>
-      <td>Shanghai Commission of Commerce</td>
-      <td>上海市商务委员会</td>
-      <td>India</td>
-      <td>Trade/Industry Association</td>
-      <td>Shanghai</td>
-      <td>2017-01-17</td>
-      <td>China</td>
     </tr>
     <tr>
       <td>Conference Board</td>
@@ -2047,6 +1992,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>French Grain Industry Association</td>
+      <td>法国粮食行业协会</td>
+      <td>National Food and Strategic Reserves Administration (formerly State Administration of Grain)</td>
+      <td>国家粮食和物资储备局</td>
+      <td>France</td>
+      <td>Trade/Industry Association</td>
+      <td>Beijing</td>
+      <td>2021-11-22</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Friedrich-Ebert-Stiftung (Beijing)</td>
       <td>弗里德里希·艾伯特基金会</td>
       <td>Chinese Association for International Understanding</td>
@@ -2454,17 +2410,6 @@
       <td>Anhui, Fujian, Gansu, Jiangsu, Jiangxi, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Xinjiang, Zhejiang</td>
     </tr>
     <tr>
-      <td>Habitat for Humanity Hong Kong (Shanghai)</td>
-      <td>香港仁人家园有限公司</td>
-      <td>Shanghai Bureau of Civil Affairs</td>
-      <td>上海市民政局</td>
-      <td>Hong Kong</td>
-      <td>Aging, Civil Society Capacity-Building, Disaster Relief, Infrastructure, International Relations/Exchange, Poverty Alleviation</td>
-      <td>Shanghai</td>
-      <td>2018-04-27</td>
-      <td>Anhui, Guangdong, Guangxi, Jiangsu, Shanghai, Zhejiang</td>
-    </tr>
-    <tr>
       <td>Habitat for Humanity Hong Kong (Sichuan)</td>
       <td>香港仁人家园有限公司</td>
       <td>Sichuan Department of Poverty Alleviation and Immigration</td>
@@ -2804,17 +2749,6 @@
       <td>Chongqing</td>
       <td>2018-04-23</td>
       <td>Chongqing</td>
-    </tr>
-    <tr>
-      <td>Humana People to People China (Sichuan)</td>
-      <td>互满爱人与人国际运动联合会</td>
-      <td>Sichuan Department of Education</td>
-      <td>四川省教育厅</td>
-      <td>Switzerland</td>
-      <td>Civil Society Capacity-Building, Disaster Relief, Education, Environment, Gender Issues, Health, Rural Issues/Development, Science and Technology, Youth</td>
-      <td>Sichuan</td>
-      <td>2017-09-08</td>
-      <td>Sichuan</td>
     </tr>
     <tr>
       <td>Humana People to People China (Yunnan)</td>
@@ -3301,17 +3235,6 @@
       <td>Beijing</td>
     </tr>
     <tr>
-      <td>International Trademark Association (Shanghai)</td>
-      <td>国际商标协会公司</td>
-      <td>Shanghai Commission of Commerce</td>
-      <td>上海市商务委员会</td>
-      <td>United States</td>
-      <td>Trade/Industry Association</td>
-      <td>Shanghai</td>
-      <td>2017-04-01</td>
-      <td>China</td>
-    </tr>
-    <tr>
       <td>International Union Against Tuberculosis and Lung Disease</td>
       <td>国际防痨和肺部疾病联合会</td>
       <td>Shandong Health Commission (formerly Shandong Health and Family Planning Commission)</td>
@@ -3442,6 +3365,17 @@
       <td>Beijing</td>
       <td>2019-03-05</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Japan Hubei Chamber of Commerce</td>
+      <td>一般社团法人日本湖北总商会</td>
+      <td>Council for the Promotion of International Trade, Hubei</td>
+      <td>中国国际贸易促进委员会湖北省委员会</td>
+      <td>Japan</td>
+      <td>Trade/Industry Association</td>
+      <td>Hubei</td>
+      <td>2021-11-26</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guizhou, Hainan, Hebei, Henan, Hubei, Hunan, Jilin, Liaoning, Qinghai, Shaanxi, Shandong, Shanghai, Sichuan, Tianjin, Yunnan</td>
     </tr>
     <tr>
       <td>Japan International Cooperation Center</td>
@@ -3972,17 +3906,6 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>Loaves and Fishes International</td>
-      <td>美国饼和鱼国际慈善基金会</td>
-      <td>Fujian Department of Civil Affairs</td>
-      <td>福建省民政厅</td>
-      <td>United States</td>
-      <td>Disabilities, Poverty Alleviation, Youth</td>
-      <td>Fujian</td>
-      <td>2020-07-06</td>
-      <td>Fujian</td>
-    </tr>
-    <tr>
       <td>Logistics Alliance Germany</td>
       <td>德国物流联盟</td>
       <td>Shanghai Commission of Transport</td>
@@ -4454,17 +4377,6 @@
       <td>Shanghai</td>
       <td>2018-01-12</td>
       <td>China</td>
-    </tr>
-    <tr>
-      <td>North Gyeongsang Economic Revitalization Institute (Beijing)</td>
-      <td>韩国（财）庆尚北道经济振兴院</td>
-      <td>Beijing Bureau of Commerce (formerly Beijing Commission of Commerce)</td>
-      <td>北京市商务委员会</td>
-      <td>South Korea</td>
-      <td>Trade/Industry Association</td>
-      <td>Beijing</td>
-      <td>2018-05-21</td>
-      <td>Beijing, Heilongjiang</td>
     </tr>
     <tr>
       <td>North Gyeongsang Economic Revitalization Institute (Shanghai)</td>
@@ -5443,17 +5355,6 @@
       <td>Civil Society Capacity-Building, Education, Environment, International Relations/Exchange, Youth</td>
       <td>Beijing</td>
       <td>2017-02-08</td>
-      <td>China</td>
-    </tr>
-    <tr>
-      <td>Sun Culture Foundation</td>
-      <td>阳光文化基金会</td>
-      <td>Beijing Commission of Education</td>
-      <td>北京市教育委员会</td>
-      <td>Hong Kong</td>
-      <td>Arts and Culture, Civil Society Capacity-Building, International Relations/Exchange, Youth</td>
-      <td>Beijing</td>
-      <td>2017-09-01</td>
       <td>China</td>
     </tr>
     <tr>
