--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -60,7 +60,7 @@ top:-80px; */
 
   <div id="wrapper">
 	<div id="header">Charged Individuals</div>
-	<div id="subhed">Individuals arrested under the NSL or by the NSD who have since been charged, out of all individuals arrested</div>
+	<div id="subhed">Individuals arrested by the NSD who have since been charged, out of all individuals arrested</div>
   <div id="pieChart"></div>
   </div>
 
@@ -79,13 +79,13 @@ var pie = new d3pie("pieChart", {
 		"content": [
 			{
 				"label": "Charged",
-				"value": 101,
+				"value": 97,
 				"color": "#686868"
 			},
 
 {
 "label": "Arrested only",
-"value": 67,
+"value": 71,
 "color": "#03798D"
 }
 
