--- a/viz/NSL/arrests_subversion_pie.html
+++ b/viz/NSL/arrests_subversion_pie.html
@@ -60,7 +60,7 @@ top:-80px; */
 
   <div id="wrapper">
 	<div id="header">Arrests for Subversion</div>
-	<div id="subhed">Arrests for inciting, abetting, or committing subversion, in comparison with other NSL violations or NSD arrests</div>
+	<div id="subhed">Arrests for inciting, abetting, or committing subversion, in comparison with other NSD arrests</div>
   <div id="pieChart"></div>
   </div>
 
