--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -562,6 +562,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Australian Hubei Chamber of Commerce</td>
+      <td>澳大利亚湖北商会</td>
+      <td>Council for the Promotion of International Trade, Hubei</td>
+      <td>中国国际贸易促进委员会湖北省委员会</td>
+      <td>Australia</td>
+      <td>Trade/Industry Association</td>
+      <td>Hubei</td>
+      <td>2021-11-29</td>
+      <td>Hubei</td>
+    </tr>
+    <tr>
       <td>Austria-China Peaceful Reunification Promotion Association</td>
       <td>奥地利中国和平统一促进会</td>
       <td>Hunan Office of Overseas Chinese Affairs</td>
@@ -3966,7 +3977,7 @@
       <td>Guangdong Youth Federation</td>
       <td>广东省青年联合会</td>
       <td>Macau</td>
-      <td>International Relations/Exchange, Youth</td>
+      <td>Education, International Relations/Exchange, Youth</td>
       <td>Guangdong</td>
       <td>2021-11-09</td>
       <td>Guangdong</td>
