--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -3235,6 +3235,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>International Theatre Institute</td>
+      <td>国际戏剧协会</td>
+      <td>Shanghai Commission of Education</td>
+      <td>上海市教育委员会</td>
+      <td>France</td>
+      <td>Arts and Culture, International Relations/Exchange</td>
+      <td>Shanghai</td>
+      <td>2021-12-07</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>International Trademark Association (Beijing)</td>
       <td>国际商标协会</td>
       <td>Beijing Intellectual Property Office</td>
