--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1398,6 +1398,17 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Climate Group</td>
+      <td>气候组织</td>
+      <td>Ministry of Ecology and Environment (formerly Ministry of Environmental Protection)</td>
+      <td>生态环境部</td>
+      <td>United Kingdom</td>
+      <td>Environment</td>
+      <td>Beijing</td>
+      <td>2021-12-30</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Cloud Security Alliance</td>
       <td>云安全联盟大中华区</td>
       <td>Shanghai Commission of Economy and Informatization</td>
@@ -3167,6 +3178,17 @@
       <td>Hubei</td>
       <td>2017-05-15</td>
       <td>Anhui, Fujian, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>International Powerlifting Federation</td>
+      <td>国际力量举联合会</td>
+      <td>Beijing Bureau of Sport</td>
+      <td>北京市体育局</td>
+      <td>Luxembourg</td>
+      <td>International Relations/Exchange, Sport</td>
+      <td>Beijing</td>
+      <td>2021-12-30</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>International Secretariat G-Global</td>
