--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2663,7 +2663,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>Hong Kong Institute of Certified Public Accountants</td>
+      <td>Hong Kong Institute of Certified Public Accountants (Guangdong)</td>
       <td>香港会计师公会</td>
       <td>Ministry of Finance</td>
       <td>财政部</td>
@@ -6632,6 +6632,94 @@
       <td>Yunnan</td>
       <td>2017-12-14</td>
       <td>Yunnan</td>
+    </tr>
+    <tr>
+      <td>TIC Council</td>
+      <td>TIC国际检验检测认证理事会</td>
+      <td>Shanghai Administration of Market Regulation</td>
+      <td>上海市市场监督管理局</td>
+      <td>Belgium</td>
+      <td>Science and Technology, Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2022-01-04</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Wine &amp; Spirit Education Trust (WSET)</td>
+      <td>葡萄酒与烈酒教育基金会</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>United Kingdom</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2022-01-04</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Serbia Chamber of Commerce</td>
+      <td>塞尔维亚商会</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>Serbia</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2022-01-04</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>France-Panyu Friendship Society</td>
+      <td>法国番禺富善社</td>
+      <td>Guangdong Federation of Returned Overseas Chinese</td>
+      <td>广东省归国华侨联合会</td>
+      <td>France</td>
+      <td>Arts and Culture, International Relations/Exchange, Tourism, Trade/Industry Association</td>
+      <td>Guangdong</td>
+      <td>2022-01-05</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>Ellen MacArthur Foundation</td>
+      <td>艾伦·麦克阿瑟基金会</td>
+      <td>Ministry of Ecology and Environment (formerly Ministry of Environmental Protection)</td>
+      <td>生态环境部</td>
+      <td>United Kingdom</td>
+      <td>Environment, International Relations/Exchange</td>
+      <td>Beijing</td>
+      <td>2022-01-06</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>Clinton Health Access Initiative</td>
+      <td>克林顿健康发展组织</td>
+      <td>Hainan Health Commission (formerly Hainan Health and Family Planning Commission)</td>
+      <td>海南省卫生健康委员会</td>
+      <td>United States</td>
+      <td>Health, International Relations/Exchange</td>
+      <td>Hainan</td>
+      <td>2022-01-10</td>
+      <td>Hainan</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Institute of Certified Public Accountants (Beijing)</td>
+      <td>香港会计师公会</td>
+      <td>Ministry of Finance</td>
+      <td>财政部</td>
+      <td>Hong Kong</td>
+      <td>Trade/Industry Association</td>
+      <td>Beijing</td>
+      <td>2022-01-11</td>
+      <td>Anhui, Beijing, Chongqing, Gansu, Guizhou, Hebei, Heilongjiang, Henan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Tibet, Xinjiang, Xinjiang Bingtuan, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>International Ski Federation (FIS)</td>
+      <td>国际滑雪联合会</td>
+      <td>Beijing Bureau of Sport</td>
+      <td>北京市体育局</td>
+      <td>Switzerland</td>
+      <td>International Relations/Exchange, Sport, Youth</td>
+      <td>Beijing</td>
+      <td>2022-01-11</td>
+      <td>China</td>
     </tr>
   </tbody>
 </table>
